Live Edit: Fix so the page shader is always covering the whole browser viewport

--- a/modules/wem-webapp/src/main/webapp/dev/live-edit/app/css/live-edit.css
+++ b/modules/wem-webapp/src/main/webapp/dev/live-edit/app/css/live-edit.css
@@ -168,6 +168,10 @@ a {
     z-index: 1000045;
 }
 
+#live-edit-page-shader {
+    position: fixed !important;
+}
+
 /*** Outliner */
 
 .live-edit-selected-component {
